--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,464 @@
+body {
+  font-family: 'Raleway', sans-serif;
+  margin: 0px;
+  padding: 0px;
+  background-color: rgb(235, 235, 235);
+}
 
+.underline {
+  text-decoration: none;
+  position: relative;
+}
+
+.underline::after {
+  position: absolute;
+  height: 2.5vw;
+  margin: 0 auto;
+  content: '';
+  left: 0;
+  right: 0;
+  width: 80%;
+  color: rgb(69, 69, 69, .3);
+  background-color: rgb(143, 73, 22, .3);
+  left: 0;
+  bottom: 1.75vh;
+}
+
+h1 {
+  font-family: 'Titillium', sans-serif;
+  font-weight: 400;
+  letter-spacing: normal;
+  color: #f5f5f5;
+  font-size: 5vw;
+  text-align: center;
+  text-transform: uppercase;
+  text-shadow: 5px 5px 10px rgb(0, 0, 0);
+  line-height: 1.4;
+  padding: 0px 30px 0px 30px;
+  margin: 0 0 1% 0;
+  line-height: 1.2;
+}
+
+h2 {
+  font-family: 'Titillium', sans-serif;
+  font-weight: 100;
+  font-size: 4vw;
+  color: #f5f5f5;
+  text-shadow: 5px 5px 10px rgb(0, 0, 0);
+  letter-spacing: 1px;
+  border-radius: 5px;
+  padding-bottom: 2vw;
+  margin-bottom: 2vw;
+}
+
+h3 {
+  font-family: 'Raleway', sans-serif;
+  color: rgb(143, 73, 22);
+  text-shadow: 5px 5px 5px rgb(143, 73, 22, .3);
+  text-transform: uppercase;
+  letter-spacing: 0px;
+  font-size: 3vh;
+  font-weight: 400;
+  margin: 0 0 1.5vw 0;
+  padding: 0px;
+}
+
+#title {
+  width: 60%;
+  height: 100vh;
+  max-height: 100vh;
+  min-width: 0;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  position: relative;
+  text-align: center;
+  opacity: 1;
+  overflow: auto;
+  background-color: rgb(245, 245, 245);
+  box-shadow: 0px 5px 15px rgb(0, 0, 0, .15);
+  z-index: 2;
+  border-radius: 5px;
+}
+
+#tribute-info {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+  min-width: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  flex-wrap: nowrap;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  padding-left: 0;
+  padding-right: 0;
+  overflow: auto;
+}
+
+p {
+  font-family: 'Raleway', sans-serif;
+  font-size: 2.5vh;
+  font-weight: 400;
+  color: black;
+  text-align: center;
+  line-height: 0;
+  padding: 0;
+  margin: 0;
+  letter-spacing: 1.2px;
+}
+
+#img-div {
+  width: 40%;
+  max-width: 40vw;
+  min-width: 0;
+  height: 100vh;
+  text-align: center;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  margin: 0px 0px 0px 0px;
+  justify-content: flex-start;
+  align-items: flex-start;
+  position: relative;
+  overflow: auto;
+  flex-wrap: nowrap;
+  border-radius: 5px;
+}
+
+#img-div img {
+  position: fixed;
+  max-width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+#two-column {
+  min-width: 0;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  background-color: rgb(245, 245, 245, .2);
+  margin: 0;
+  padding: 0;
+}
+
+#columnOrganizer {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  min-width: auto;
+  height: auto;
+  margin: 0px 0px 0px 0px;
+  z-index: 3;
+  overflow: auto;
+}
+
+a {
+  text-decoration: none;
+  color: #271513;
+}
+
+a:visited {
+  color: black;
+}
+
+ul {
+  list-style: none;
+  text-align: center;
+  width: 60%;
+  background-color: #f5f5f5;
+  padding: 80px 40px 80px 40px;
+  box-shadow: 0px 5px 15px rgb(0, 0, 0, .15);
+  border-radius: 5px;
+}
+
+ul li {
+  font-size: 2.5vh;
+  line-height: 0.9;
+  letter-spacing: 0.8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  text-align: center;
+}
+
+.hovering ul li img{
+  display: none;
+  position: absolute;
+  z-index: 3;
+}
+
+.hovering ul li:hover img {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  margin-left: -150px;
+  margin-top: -100px;
+  width: 50%;
+  height: auto;
+  z-index: 1000;
+  overflow: hidden;
+}
+
+.fade-in {
+	opacity: 1;
+	animation-name: fadeInOpacity;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-in;
+	animation-duration: 2s;
+}
+
+@keyframes fadeInOpacity {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+ul li h5 {
+  font-size: 1.7vh;
+  line-height: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+  letter-spacing: 2px;
+  margin-top: 14px;
+  text-transform: uppercase;
+}
+
+ul li span h4 {
+  margin-bottom: 0px;
+}
+
+ul li h5 a {
+  color: #a35c29!important;
+}
+
+ul li h5:hover,
+a:hover {
+  text-decoration: underline;
+  color: #4f4f4f;
+}
+
+.tooltip {
+  color: rgb(0, 0, 0, 0.5);
+  position: relative;
+}
+
+.tooltiptext {
+  display: none;
+  width: 30vw;
+  color: white;
+  background-color: rgb(0, 0, 0, 0.5);
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.1vw;
+  font-weight: 600;
+  text-align: center;
+  line-height: 1.2;
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 20px;
+  position: absolute;
+  z-index: 10;
+  bottom: 120%;
+  opacity: 0;
+}
+
+.tooltip:hover .tooltiptext {
+  display: flex;
+  visibility: visible;
+}
+
+.fa-paint-brush {
+  font-size: 2vw!important;
+  margin-top: 6%;
+  margin-bottom: 6%;
+  color: rgb(69, 69, 69, 25);
+}
+
+@media only screen and (min-width: 1024px) {
+  body {
+    background-image: url('images/The_Garden_of_Earthly_Delights.jpg');
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-attachment: fixed;
+  }
+}
+
+@media only screen and (max-width: 972px) {
+  h1 {
+    line-height: 1;
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+
+  p {
+    line-height: 1;
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+
+  .hovering ul li img {
+    display: none;
+  }
+
+  .hovering ul li:hover img {
+    display: none;
+  }
+
+  ul li span a {
+    line-height: 1.2;
+  }
+
+  h3 {
+    margin: 0px 1% 0px 1%;
+  }
+
+  h2 {
+    margin: 0px 1% 1.5% 1%;
+  }
+
+  ul li h5 {
+    margin-top: 5px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  h1 {
+    line-height: 1;
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+
+  p {
+    line-height: 1;
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+
+  .hovering ul li img {
+    display: none;
+  }
+
+  .hovering ul li:hover img {
+    display: none;
+  }
+
+  ul li span a {
+    line-height: 1.2;
+  }
+
+  h3 {
+    margin: 0px 1% 0px 1%;
+  }
+
+  h2 {
+    margin: 0px 1% 1.5% 1%;
+  }
+
+  ul li h5 {
+    margin-top: 5px;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  h1 {
+    line-height: 1;
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+
+  p {
+    line-height: 1;
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+
+  .hovering ul li img {
+    display: none;
+  }
+
+  .hovering ul li:hover img {
+    display: none;
+  }
+
+  ul li span a {
+    line-height: 1.2;
+  }
+
+  h3 {
+    margin: 0px 1% 0px 1%;
+  }
+
+  h2 {
+    margin: 0px 1% 1% 1%;
+  }
+
+  ul li h5 {
+    margin-top: 5px;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  h1 {
+    line-height: 1;
+  }
+
+  p {
+    line-height: 1;
+  }
+
+  .hovering ul li img {
+    display: none;
+  }
+
+  .hovering ul li:hover img {
+    display: none;
+  }
+
+  ul li span a {
+    line-height: 1.2;
+  }
+
+  h3 {
+    margin: 0px 1% 0px 1%;
+  }
+
+  h2 {
+    margin: 0px 1% 1% 1%;
+  }
+
+  ul li h5 {
+    margin-top: 5px;
+  }
+
+  .fa-paint-brush {
+    margin-top: 15%;
+    margin-bottom: 15%;
+  }
+}
