--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ h1 {
   font-family: 'Titillium', sans-serif;
   font-weight: 400;
   letter-spacing: normal;
-  color: #f5f5f5;
+  color: rgb(143, 73, 22);
   font-size: 5vw;
   text-align: center;
   text-transform: uppercase;
@@ -43,7 +43,7 @@ h2 {
   font-family: 'Titillium', sans-serif;
   font-weight: 100;
   font-size: 4vw;
-  color: #f5f5f5;
+  color: rgb(143, 73, 22);
   text-shadow: 5px 5px 10px rgb(0, 0, 0);
   letter-spacing: 1px;
   border-radius: 5px;
@@ -293,10 +293,37 @@ a:hover {
 }
 
 .fa-paint-brush {
-  font-size: 2vw!important;
+  font-size: 2.5vw!important;
   margin-top: 6%;
   margin-bottom: 6%;
   color: rgb(69, 69, 69, 25);
+}
+
+@media only screen and (max-width: 1023px) {
+  #img-div img {
+    display: none;
+  }
+
+  #img-div {
+    width: 0%;
+    max-width: 0vw;
+  }
+
+  #title {
+    width: 100%;
+    max-width: 100vw;
+    background-color: rgb(235, 235, 235, .85)!important;
+  }
+
+  ul {
+    width: 90%;
+    max-width: 100vw;
+  }
+
+  #tribute-info {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 }
 
 @media only screen and (min-width: 1024px) {
