--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,16 @@ a:hover {
   color: rgb(69, 69, 69, 25);
 }
 
+@media only screen and (min-width: 1024px) {
+  two-column {
+    background-image: url('images/The_Garden_of_Earthly_Delights.jpg');
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-attachment: fixed;
+  }
+}
+
 @media only screen and (max-width: 1023px) {
   #img-div img {
     display: none;
