--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ h1 {
 h2 {
   font-family: 'Titillium', sans-serif;
   font-weight: 100;
-  font-size: 4vw;
+  font-size: 4vh;
   color: rgb(143, 73, 22);
   text-shadow: 5px 5px 10px rgb(0, 0, 0);
   letter-spacing: 1px;
