--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ h1 {
   font-weight: 400;
   letter-spacing: normal;
   color: rgb(143, 73, 22);
-  font-size: 5vw;
+  font-size: 5vh;
   text-align: center;
   text-transform: uppercase;
   text-shadow: 5px 5px 10px rgb(0, 0, 0);
