--- a/css/style.css
+++ b/css/style.css
@@ -297,7 +297,7 @@ a:hover {
 }
 
 .fa-paint-brush {
-  font-size: 2.5vw!important;
+  font-size: 3vh!important;
   margin-top: 6%;
   margin-bottom: 6%;
   color: rgb(69, 69, 69, 25);
